ch07/bgd/bgd-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bgd-route
  namespace: bgd
  labels:
    app: bgd
    app.kubernetes.io/instance: bgd-app
spec:
  to:
    kind: Service
    name: bgd
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
    certificate: ''
    key: ''
    caCertificate: ''
    destinationCACertificate: ''
  host: www.bgd.lab.net
  port:
    targetPort: 8080
